--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,25 @@ img:hover {
   background-color: #dd4444;
 }
 
+.container{
+display: flex;
+flex-wrap: wrap;
+
+}
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
+.column{
+  display: inline;
+  width: 48%
+}
 
 /* create your tile classes! we recommend .small .med .large */
+.small {
+  width: 24%
+}
+.med {
+
+
+}
+img{
+
+}
