--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ flex-wrap: wrap;
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 .column{
 
-  width: 48%
+  flex: 48%
 }
 
 /* create your tile classes! we recommend .small .med .large */
