--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ img:hover {
 
 .container{
 display: grid;
-grid-template-columns: auto;
+grid-template-columns: repeat(3,1fr);
 
 }
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
