--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ grid-template-columns: repeat(3,33%);
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 .column{
  display: inline-block;
+ width: 30%;
 
 }
 
